<resources>
    <string name="app_name">MosPlace</string>

    <string name="districts">Districts</string>
    <string name="places">Places</string>

    <string name="unique_place">Unique place</string>
    <string name="restaurant">Restaurant</string>
    <string name="park">Park</string>
    <string name="search">Search</string>
    <string name="hint_search">Type district here</string>

    <string name="select_all">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <!-- Bottom navigation -->
    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="your_review">Your review</string>
    <string name="review_subtitle">Your rating and review will be visible to everyone</string>
    <string name="review">Review</string>
    <string name="save">Save</string>

    <!-- ReviewFragment -->
    <string name="error_rating">Choose correct rating</string>
    <string name="error_empty_field">Empty field</string>
    <string name="filter_list">Filter list</string>

    <string name="error_network">Network problems</string>
    <string name="try_again">Try again</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>

    <!-- On Boarding -->
    <string name="screen1_title" translatable="false">MosPlace</string>
    <string name="screen1_desc">The application contains various places, like landmarks, restaurants, parks, that are grouped by districts of Moscow. </string>

    <string name="screen2_title">Choose district</string>
    <string name="screen2_desc">You can open district by tapping on card</string>

    <string name="screen3_title">Choose place</string>
    <string name="screen3_desc">You can open place by tapping on card</string>

    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mosplace" translatable="false">MosPlace</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Errors -->
    <string name="email_blank_error">Email can\'t be blank</string>
    <string name="email_invalid_error">Invalid email</string>
    <string name="field_blank_error">This field can\'t be blank</string>
    <string name="password_length_error">The password needs to consist of at least %d characters</string>
    <string name="passwords_dont_match_error">The passwords don\'t match</string>
    <string name="username_blank_error">Username can\'t be blank</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="confirm_email">Confirm email</string>
    <string name="account_created">An account created</string>
    <string name="account_failed">Failed to create an account</string>
    <string name="got_it">Got it</string>

    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="automatically">Automatically</string>
    <string name="leave_account_message">Are you sure you want out of the account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="turn_on_gps">Turn on GSP</string>
    <string name="user_location_far">You are far from this place.</string>

    <string name="description">Description</string>
    <string name="all_reviews">All reviews</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="mark_as_spam">Mark as spam</string>
    <string name="review_spam_marked">Review marked as spam</string>
    <string name="no_reviews">No reviews</string>
    <string name="gps_turned_off">GPS turned off</string>
    <string name="permission_geo_error">Permission for geolocation is not given</string>

    <string name="should_remember">You should remember bro</string>
</resources>